--- a/lib/src/core-input/core-input.css
+++ b/lib/src/core-input/core-input.css
@@ -11,7 +11,6 @@
 :host {
   display: inline-block;
   text-align: inherit;
-  color: #ccc;
   position: relative;
   width: 20em;
 }
@@ -23,6 +22,7 @@
 input,
 textarea {
   font: inherit;
+  color: inherit;
   width: 100%;
   margin: 0;
   padding: 0;
